<?xml version="1.0"?>
<package format="2">
  <name>mc_sim_highway</name>
  <version>0.0.0</version>
  <description>This package does monte-carlo simulation of highway scenario</description>

  <license>BSD</license>
  <maintainer email="lingguang.wang@kit.edu">Lingguang Wang</maintainer>
  <author email="lingguang.wang@kit.edu">Lingguang Wang</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>mrt_cmake_modules</build_depend>
  <test_depend>gtest</test_depend>
  <depend>libboost-python-dev</depend>
  <test_depend>gtest</test_depend>
  <!--
    Documentation for dependencies:
    <build_depend>            Build-time dependency required to build
                              this package, e.g. boost, opencv.
    <build_export_depend>     Exported build-time dependency required to
                              build packages that depend on this package,
                              e.g. boost, opencv.
    <exec_depend>             Execution dependency required to run this
                              package, e.g. boost, opencv.
    <depend>                  Build-time, exported build-time and execution
                              dependency. This is a bundled synonym for
                              <build_depend>, <build_export_depend> and
                              <exec_depend>.
  -->
  <!--
    Example:
    <depend>mrt_opencv</depend>
  -->

  <export>
    <!-- Other tools can request additional information be placed here -->
  </export>
</package>
