<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>mc_sim_highway</name>
  <version>0.0.0</version>
  <description>This package does monte-carlo simulation of highway scenario</description>

  <license>BSD</license>
  <maintainer email="lingguang.wang@kit.edu">Lingguang Wang</maintainer>
  <author email="lingguang.wang@kit.edu">Lingguang Wang</author>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>mrt_cmake_modules</buildtool_depend>
  <buildtool_export_depend>mrt_cmake_modules</buildtool_export_depend>
  
  <test_depend>gtest</test_depend>
  <depend>libboost-python-dev</depend>

</package>
